# photon-411

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  cloudbuild.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
static/css/: style.css
templates/: about.html  base.html  blog.html  crew.html  index.html  races.html  socials.html
templates/blog/: new-for-2026.html
